--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="PT">
 <head>
     <meta charset="utf-8">
-    <title>Efolio-A  </title>
-
+    <title>Efolio-A Computação Gráfica </title>
     <style>
         body { margin: 0; }
     </style>
@@ -12,8 +11,7 @@
 <body>
 <script type="module">
 import * as Interface from "./src/Interface.mjs"
-Interface.Inicio()
-
+Interface.iniciarInterface()
 </script>
 </body>
 </html>
