--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="PT">
 <head>
     <meta charset="utf-8">
-    <title>Efolio-A Computação Gráfica </title>
+    <title>Efolio-A: Computação Gráfica </title>
     <style>
         body { margin: 0; }
     </style>
